--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+
+/* added a background to add some color to the page*/
+
 body {
     background-image: url("https://img.freepik.com/free-vector/vibrant-pink-watercolor-painting-background_53876-58931.jpg?size=626&ext=jpg&ga=GA1.1.2116175301.1701561600&semt=ais");
     background-size: cover;
